[package]
name = "gbemu"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
log = "0.4.0"
env_logger = "0.8.3"
pixels = "0.2.0"
winit = "0.24"
winit_input_helper = "0.9"
