[package]
name = "gbemu"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
log = "0.4.14"
env_logger = "0.9.0"
pixels = "0.6.0"
winit = "0.25.0"
winit_input_helper = "0.10.0"
